examples/check/check.out
#At the command line, navigate to the directory that contains the 
#`.bal` file and run the `ballerina run` command. 
$ ballerina run check.bal
validating bob...
bob has a valid city
Bob's result 1:true
bob has a valid city
Bob's result 2:true

validating tom...
Tom's result 1:address not found {}
error: address not found {}
	at main(check.bal:66)
	   validateAddressAgain(check.bal:44)
